fix font-size h1 on small devices

--- a/src/theme/custom-bootstrap/static/css/style.css
+++ b/src/theme/custom-bootstrap/static/css/style.css
@@ -275,6 +275,7 @@ max-width:970px
 .img-right,.img-left,.carousel {
 display:none!important
 }
+h1 {font-size: 38px;}
 }
 
 @media only screen and (max-device-width:800px),only screen and (device-width:1024px) and (device-height:600px),only screen and (width:1280px) and (orientation:landscape),only screen and (device-width:800px),only screen and (max-width:767px) {
